ggs in the chat

--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
             <div class="flex flex-wrap text-left lg:text-left">
                 <div class="w-full lg:w-6/12 px-4">
                     <h4 class="text-3xl font-semibold text-gray-200 font-integral uppercase">DreamWorks</h4>
-                    <h5 class="text-lg my-1 text-gray-200">The Career Club Of DPS Rohini</h5>
+                    <h5 class="text-lg my-1 text-gray-200">The Career Development Club Of DPS Rohini</h5>
                     <h3 class="text-base my-1 text-gray-200">Let your Dreams Work for you</h3>
                    <div class="mt-6 lg:mb-0 mb-6">
                 <button class="bg-white text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 hover:scale-105 transition-all duration-200" type="button">
