--- a/members.html
+++ b/members.html
@@ -123,7 +123,7 @@
                 <div class="member">
                     <img src="images/members/toshi.jpg" alt="member image" class="member__img">
                     <div class="member__text">
-                          <p class="member__name">Toshi</p>
+                          <p class="member__name">Toshi Mittal</p>
                           <p class="member__post">Head ( Psychometric Testing and Self-awareness )</p>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="member">
                     <img src="images/members/ananya.jpg" alt="member image" class="member__img">
                     <div class="member__text">
-                          <p class="member__name">Ananya</p>
+                          <p class="member__name">Ananya Sharma</p>
                           <p class="member__post">Head ( Emerging Careers and Research )</p>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="member">
                     <img src="images/members/abhavya.jpg" alt="member image" class="member__img">
                     <div class="member__text">
-                          <p class="member__name">Abhavya</p>
+                          <p class="member__name">Abhavya Gupta</p>
                           <p class="member__post">Head ( Profile Building and Experience )</p>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                 <div class="member">
                     <img src="images/members/avanya.jpg" alt="member image" class="member__img">
                     <div class="member__text">
-                          <p class="member__name">Avanya</p>
+                          <p class="member__name">Avanya Saxena</p>
                           <p class="member__post">Head ( Studying Abroad and Global Exposure )</p>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
             <div class="w-full lg:w-6/12 px-4">
               <h4 class="text-3xl font-semibold text-gray-200 font-integral uppercase">DreamWorks</h4>
               <h5 class="text-lg my-1 text-gray-200">
-                The Career Club Of DPS Rohini
+                The Career Development Club Of DPS Rohini
               </h5>
               <h3 class="text-base my-1 text-gray-200">
                 Let your Dreams Work for you
