--- a/resources.html
+++ b/resources.html
@@ -75,7 +75,7 @@
                 Coming Soon
               </h3>
             </div> -->
-            <embed src="bny-wcp-2508011523-1339580405-1.pdf" type="application/pdf" width="80%" height="600px" />
+            <embed src="Careers in Humanities (1).pdf" type="application/pdf" width="80%" height="600px" />
              <embed src="9TH AND 10TH CLASS.pdf" class="pt-36 pb-36" type="application/pdf" width="80%" height="800px" /> 
             <embed src="Careers in PCB (1).pdf" class="pt-36 pb-36" type="application/pdf" width="80%" height="800px" />
           </div>
@@ -94,7 +94,7 @@
             <div class="w-full lg:w-6/12 px-4">
               <h4 class="text-3xl font-semibold text-gray-200 font-integral uppercase">DreamWorks</h4>
               <h5 class="text-lg my-1 text-gray-200">
-                The Career Club Of DPS Rohini
+                The Career Development Club Of DPS Rohini
               </h5>
               <h3 class="text-base my-1 text-gray-200">
                                 Let your Dreams Work for you
