--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </li>
   
     <li class="mx-4 my-4 md:my-0">
-  <a href="resources.html" class="nav-link">CAREER</a>
+  <a href="resources.html" class="nav-link">RESOURCES</a>
     </li>
     
     <li class="mx-4 my-6 md:my-0">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="flex flex-col items-center justify-center gap-4">
                   <div class="flex justify-center text-5xl sm:text-6xl md:text-8xl font-bold text-gray-900 dark:text-gray-100 my-5 tracking-wider font-integral">DreamWorks</div>
-                  <div class="flex justify-center text-base sm:text-3xl md:text-4xl font-medium text-gray-600 dark:text-gray-300 my-5">The Career Club Of DPS Rohini</div>
+                  <div class="flex justify-center text-base sm:text-3xl md:text-4xl font-medium text-gray-600 dark:text-gray-300 my-5">The Career Development Club Of DPS Rohini</div>
                   <div class="flex justify-center text-base sm:text-2xl md:text-3xl font-medium text-gray-600 dark:text-gray-300 my-5">Let your Dreams Work for you</div>
                   <div class="flex justify-around items-center w-2/3 mt-4">
                     <a href="https://chat.whatsapp.com/Fx1AXlWDM8Q0O33ac5k9OZ " target="_blank" class="mr-4 flex text-sm md:text-lg items-center gap-2 rounded py-4 px-4 bg-[#25D366] text-white font-medium hover:scale-105 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 ease-in-out">
@@ -146,7 +146,7 @@
             <div class="w-full lg:w-6/12 px-4">
               <h4 class="text-3xl font-semibold text-gray-200 font-integral uppercase">DreamWorks</h4>
               <h5 class="text-lg my-1 text-gray-200">
-                The Career Club Of DPS Rohini
+                The Career Development Club Of DPS Rohini
               </h5>
               <h3 class="text-base my-1 text-gray-200">
                 Let your Dreams Work for you
